--- a/index.html
+++ b/index.html
@@ -10,8 +10,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        test
+    <div id="features" class="container-middle">
+        <h1>Feature We Provide</h1>
+        <p>We deliver impactful customer experiences driven by innovation & insight.</p>
+        <div id="feature-list">
+            <div class="feature-cart">
+                <div class="f-image bg-orange">
+                    <img src="./assets/images/box.png" alt="">
+                </div>
+                <div class="f-details">
+                    <h3>User Experience Design</h3>
+                    <div class="f-desc">
+                        <h6>Process-oriented user experiences with <br> pixel perfect user interface designs.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-cart">
+                <div class="f-image bg-purple">
+                    <img src="./assets/images/clarity_design-line.png" alt="">
+                </div>
+                <div class="f-details">
+                    <h3>User Experience Design</h3>
+                    <div class="f-desc">
+                        <h6>Process-oriented user experiences with <br> pixel perfect user interface designs.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-cart">
+                <div class="f-image bg-green">
+                    <img src="./assets/images/bx_bx-video.png" alt="">
+                </div>
+                <div class="f-details">
+                    <h3>User Experience Design</h3>
+                    <div class="f-desc">
+                        <h6>Process-oriented user experiences with <br> pixel perfect user interface designs.</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="feature-cart">
+                <div class="f-image bg-yellow">
+                    <img src="./assets/images/ic_outline-developer-mode.png" alt="">
+                </div>
+                <div class="f-details">
+                    <h3>User Experience Design</h3>
+                    <div class="f-desc">
+                        <h6>Process-oriented user experiences with <br> pixel perfect user interface designs.</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
