--- a/index.html
+++ b/index.html
@@ -1,17 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="container">
-        test
+    <div class="container-footer">
+        <div class="container-main">
+            <div class="row row-footer-t">
+                <div class="col-6">
+                    <img src="assets/images/Logo.svg" alt="">
+
+                </div>
+                <div class="col-6">
+                    <h2 class="f-title">We are a young digital agency<br>who make your design great.</h2>
+                </div>
+            </div>
+            <div class="row row-footer-m">
+                <div class="col-4">
+                    <h3 class="m-title">Join our newsletter</h3>
+                    <h6 class="m-email">Enter your email</h6>
+                    <input type="radio" id="sub">
+                    <label for="sub" class="m-sub">i would like to receive email <br> about Sessions products,<br>
+                        services</label>
+                    <span class="m-but">SUBMIT</span>
+                </div>
+                <div class="col-4 p-center">
+                    <div class="contact">
+                        <h2>Contact</h2>
+                        <p>+01-4555-55-55</p>
+                    </div>
+                    <div class="address">
+                        <h2>Address</h2>
+                        <p>66-4 Parkhurst Rd, Chelmsford
+                            MA 1824</p>
+                    </div>
+                </div>
+                <div class="col-4 p-center">
+                    <div class="enquires">
+                        <h2>Enquires</h2>
+                        <p>hello@nijum.com</p>
+                    </div>
+                    <div class="follow">
+                        <h2>Follow</h2>
+                        <img src="assets/images/Icons.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row row-copyright">
+                <div class="col-6 all-right">
+
+                    <p>© 2020 Nijum. All Rights Reserved</p>
+                </div>
+                <div class="col-6 all-left">
+
+                    <span>Privacy Policies</span>
+                    <span> Terms Of Use</span>
+                    <span> Accesebility</span>
+
+
+                </div>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
